# static_site_generator

./: .coveragerc  .gitignore  __init__.py  main.py  pyproject.toml  static_site_generator.code-workspace  test.sh
.VSCodeCounter/2026-01-24_10-41-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
public/blog/glorfindel/: index.html
public/blog/majesty/: index.html
public/blog/tom/: index.html
public/contact/: index.html
src/: __init__.py  generate_page.py  get_static.py  html_leafnode.py  html_parentnode.py  html_tags.py  html_void_node.py  htmlnode.py  main.py  markdown_to_blocks.py  markdown_to_html.py  markdown_to_textnode.py  parse_markdown.py  regexes.py  test_htmlnode.py  test_leafnode.py  test_textnode.py  textnode.py
src/tests/: __init__.py  test_extract_markdown_images.py  test_html_tags.py  test_htmlnode.py  test_leafnode.py  test_markdown_to_blocks.py  test_markdown_to_textnode.py  test_md_to_html.py  test_parentnode.py  test_regex.py  test_textnode.py  test_voidnode.py  utils.py
