[project]
name = "static-site-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["black>=25.12.0", "coverage>=7.13.1", "pyrefly>=0.49.0"]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
search-path = ["./src/tests/"]
python-platform = "linux"
python-version = "3.13"
