[project]
name = "static-site-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["black>=25.12.0", "coverage>=7.13.1", "pyrefly>=0.49.0"]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
search-path = [".", "./src/", "./src/tests/"]
python-platform = "linux"
python-version = "3.13"


[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/__init__.py",
    ".gitignore",
    "*/.gitignore",
    "main.py",
]
# include = ["src/*"]
source = ["src"]
command_line = "-m unittest discover -s src/tests"
[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
]
